# llmops

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  main.py  pyproject.toml  readme.md  requirements.txt
api/api/: agent.py  operation.py  question.py  vector.py
api/auth/: __init__.py  dependencies.py  jwt.py
api/client/: __init__.py  aws.py  fastmcp.py  groxy.py  milvus.py  mongo.py  pinecone.py  redis.py  slack.py
api/helper/: agent.py  operation.py  question.py  vector.py
api/module/llm/: activate.py  dto.py  helper.py  run.py
api/module/mcp/: activate.py  dto.py  helper.py  run.py
api/module/microagent/: dashboard_data_validation.py  http_validate.py
api/module/multi_agent/: activate.py  dto.py
api/payload/: agent.py  operation.py  question.py  vector.py
api/response/: __init__.py  model.py
api/utils/: constants.py  date.py  error.py  response.py  streaming.py  vector.py
database/: Dockerfile  init.js
env/: api.yaml  database.yaml  llm-proxy.yaml  mcp.yaml  vector.yaml
llm-proxy/: .dockerignore  Dockerfile  PORTFOLIO.md  README.md  gunicorn.config.py  main.py  pyproject.toml  requirements.txt
llm-proxy/api/: file.py  llm.py
llm-proxy/client/: __init__.py  anthropic.py  azure.py  bedrock.py  common.py  fastmcp.py  fourgrit.py  google.py  local.py  open_ai.py  x.py
llm-proxy/helper/: file.py  llm.py
llm-proxy/models/: file.py  llm.py
llm-proxy/utils/: constants.py  error.py  paths.py  response.py  vector.py
nginx/: nginx.conf
redis/: Dockerfile
ui/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
ui/src/: App.jsx  AppNew.jsx  main-new.jsx  main.jsx
ui/src/api/: adminApi.js  agents.js  auth.js  chat.js  (+10 more)
vector/: Dockerfile-attu  Dockerfile-etcd  Dockerfile-minio  Dockerfile-vector
(+251 files in other folders)
